--- a/src/submittedForm/post-order.css
+++ b/src/submittedForm/post-order.css
@@ -133,6 +133,7 @@ p{
 
 .desc{
   font-size: small;
+  
 }
 
 .regenerate{
@@ -152,7 +153,7 @@ p{
 
 .img-container{
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-  background: linear-gradient(to right, #a96920 20%, rgba(0, 0, 0, 0.9));
+  background: linear-gradient(to right, #007590 20%, rgba(0, 0, 0, 0.9));
   border-radius: 20px;
   height: auto;
   align-items: center;
@@ -175,5 +176,24 @@ p{
   max-width: fit-content;
  
 }
+
+.add-ons{
+  max-width: 200px;
+}
+
+
+
+
+.add-on-item {
+  background-color: #f8f8f8;
+  padding: 10px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: max-content;
+  height: 100px;
+}
+
+
 
 
